<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:parentTag="android.widget.FrameLayout">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
    >
        <ImageView android:layout_width="80dp"
                   android:transitionName="@string/transition_touch"
                   android:id="@+id/touchImage"
                   android:layout_height="80dp"
                   android:src="@drawable/touch" android:layout_alignParentEnd="true"
                   android:layout_alignParentTop="true" android:layout_marginEnd="0dp"
                   android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/ui_event_header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:id="@+id/headerText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:layout_alignParentStart="true" android:layout_marginStart="0dp"/>

        <TextView
                android:text="@string/ui_event_body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headerText"
                android:layout_marginBottom="50dp"
                android:id="@+id/bodyText"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


        <Button
                android:layout_below="@+id/bodyText"
                android:text="@string/change_color_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/changeColorButton"/>
        <Button
                android:text="@string/play_jingle_button_text"
                android:layout_below="@+id/changeColorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/playJingleButton"
        />
        <Button
                android:text="@string/long_press_button_text"
                android:layout_below="@+id/playJingleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/longPressButton"
        />
        <Button
                android:text="@string/reset_button_text"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/longPressButton"
                android:layout_height="wrap_content"
                android:id="@+id/resetButton"
        />


    </RelativeLayout>
</merge>